--- a/public/ics.html
+++ b/public/ics.html
@@ -50,8 +50,11 @@
         </table>
       </div>
 
-      <nav aria-label="ICS Table pagination">
-        <ul class="pagination pagination-sm justify-content-center" id="paginationControls"></ul>
+      <!-- Pagination Control -->
+      <nav>
+        <ul class="pagination justify-content-center" id="paginationControlsICS">
+          <!-- Dynamic pagination goes here -->
+        </ul>
       </nav>
 
       <!-- Add ICS Modal -->
