--- a/public/user-management.html
+++ b/public/user-management.html
@@ -17,24 +17,36 @@
     <!-- Page Content -->
     <div class="container-fluid p-4" id="page-content">
 
-      <div class="d-flex flex-wrap align-items-center justify-content-between mb-4">
-      <div class="input-group me-3 mb-2 flex-grow-1">
-          <span class="input-group-text" id="search-icon"><i class="bi bi-search"></i></span>
-          <input
-            type="text"
-            id="searchInput"
-            class="form-control"
-            placeholder="Search by username or name..."
-            aria-label="Search"
-            aria-describedby="search-icon"
-          />
+      <div class="mb-4">
+        <!-- Header at the top -->
+        <h1 class="h4 mb-3">User Management</h1>
+
+        <!-- Search bar and Add button inline -->
+        <div class="d-flex flex-column flex-sm-row align-items-stretch gap-2">
+          <!-- Search Bar -->
+          <div class="input-group flex-grow-1">
+            <span class="input-group-text" id="search-icon">
+              <i class="bi bi-search"></i>
+            </span>
+            <input
+              type="text"
+              id="searchInput"
+              class="form-control"
+              placeholder="Search by username or name..."
+              aria-label="Search"
+              aria-describedby="search-icon"
+            />
+          </div>
+
+          <!-- Add User Button -->
+          <button
+            id="showAddUserFormBtn"
+            class="btn btn-outline-success flex-shrink-0"
+            style="white-space: nowrap;"
+          >
+            <i class="bi bi-person-plus me-1"></i> Add User
+          </button>
         </div>
-
-        <h1 class="h4 mb-2 me-auto ms-3">User Management</h1>
-
-        <button id="showAddUserFormBtn" class="btn btn-outline-success mb-2">
-          <i class="bi bi-person-plus me-1"></i> Add User
-        </button>
       </div>
 
       <!-- Data Table -->
@@ -56,7 +68,12 @@
         </div>
       </div>
 
-      <div id="paginationControls" class="mt-3 text-center"></div>
+      <!-- Pagination Control -->
+      <nav>
+        <ul class="pagination justify-content-center" id="paginationControlsUsers">
+          <!-- Pagination buttons will be generated here -->
+        </ul>
+      </nav>
 
       <!-- Add User Modal -->
       <div class="modal fade" id="addUserModal" tabindex="-1" aria-labelledby="addUserModalLabel" aria-hidden="true">
