--- a/public/water-user.html
+++ b/public/water-user.html
@@ -57,12 +57,11 @@
             <!-- Dynamic rows will be inserted here -->
           </tbody>
         </table>
-        <div class="d-flex justify-content-between align-items-center mt-2">
-          <button class="btn btn-secondary" id="prevPage">Previous</button>
-          <span id="paginationInfo"></span>
-          <button class="btn btn-secondary" id="nextPage">Next</button>
+        <div class="d-flex justify-content-center mt-3">
+          <nav>
+            <ul id="pagination" class="pagination"></ul>
+          </nav>
         </div>
-
       </div>
 
       <!-- Add Water User Modal -->
