change overall theme to water

--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -15,7 +15,7 @@
 
     <!-- Page Content -->
     <div class="container-fluid p-4 d-flex flex-column" id="page-content" style="min-height: 100vh;">
-      <p class="mb-4 fs-4 fw-semibold text-primary bg-light p-3 rounded shadow-sm" >
+      <p class="welcome-banner">
         Welcome Admin
       </p>
 
