--- a/public/permit.html
+++ b/public/permit.html
@@ -16,9 +16,9 @@
     <div class="container-fluid p-4" id="page-content">
       <!-- Heading -->
       <div class="mb-2">
-        <h4 class="mb-0">
+        <h2 class="mb-0">
           <i class="bi bi-file-earmark-text"></i> Water Permit
-        </h4>
+        </h2>
       </div>
 
       <!-- Search Bar and Add Button Row -->
@@ -46,15 +46,16 @@
 
       </div>
 
-      <button id="toggleFilter" class="btn btn-outline-secondary btn-sm">
+      <button id="toggleFilter" class="btn btn-sm">
         <i class="bi bi-eye-slash"></i> Hide Filters
       </button>
+
       <!-- Filter Section -->
       <div class="mb-3" id="filterSection">
         <!-- Legend -->
         <div class="d-flex align-items-center mb-1">
-          <span class="badge bg-success me-2" style="width: 20px; height: 20px;">&nbsp;</span>
-          <span>Rows highlighted in <strong>green</strong> mean the permittee is <strong>already visited</strong>.</span>
+          <span class="badge bg-info me-2" style="width: 20px; height: 20px;">&nbsp;</span>
+          <span>Rows highlighted in <strong>blue</strong> mean the permittee is <strong>already visited</strong>.</span>
         </div>
 
         <!-- Checkbox Filter -->
