--- a/public/index.html
+++ b/public/index.html
@@ -9,27 +9,43 @@
   <link rel="stylesheet" href="css/login.css" />
 </head>
 <body>
-  <div class="card p-4" style="width: 100%; max-width: 400px;">
-    <h3 class="card-title text-center mb-4">WRUS Portal</h3>
+  <div id="portal-alert" class="portal-alert">
+    <div class="portal-alert-content">
+      <h4 id="portal-alert-title">Notice</h4>
+      <p id="portal-alert-message"></p>
+      <button id="portal-alert-ok" class="btn btn-primary w-100">OK</button>
+    </div>
+  </div>
+  <div id="login-success-overlay" class="login-success-overlay">
+    <div class="login-success-content">
+      <div class="checkmark">&#10004;</div>
+      <p>Login Successful</p>
+    </div>
+  </div>
+
+  <div class="portal"></div>
+  <div id="portal-light"></div>
+
+  <div class="card">
+    <h3 class="card-title text-center mb-4">🌐 WRUS Portal</h3>
     <form id="loginForm">
       <div class="mb-3">
         <label for="username" class="form-label">Username</label>
-        <input type="text" class="form-control" id="username" required />
+        <input type="text" class="form-control" id="username" placeholder="Enter username" required />
       </div>
       <div class="mb-3">
         <label for="password" class="form-label">Password</label>
-        <input type="password" class="form-control" id="password" required />
+        <input type="password" class="form-control" id="password" placeholder="Enter password" required />
       </div>
       <button type="submit" class="btn btn-primary w-100">Login</button>
     </form>
-    <div id="errorMsg" class="mt-3 text-danger text-center" style="display: none;">
+    <div id="errorMsg" class="mt-3 text-center" style="display: none;">
       Invalid username or password.
     </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="js/login.js"></script>
-  
   <script type="module" src="js/index.js"></script>
 </body>
 </html>
