--- a/public/water-user.html
+++ b/public/water-user.html
@@ -8,14 +8,15 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/wrus.css">
 </head>
 <body>
   <div class="d-flex flex-column flex-md-row" id="wrapper">
     <div id="sidebarContainer"></div>
     <div class="container-fluid p-4" id="page-content">
-      <h4>
+      <h2>
         <i class="bi bi-droplet-half"></i> Water Users and Sources
-      </h4>
+      </h2>
       <div class="container mb-3">
         <div class="d-flex flex-column flex-md-row justify-content-between align-items-center gap-2">
 
