change bootstrap to css water themed

--- a/public/inventory-summary.html
+++ b/public/inventory-summary.html
@@ -11,6 +11,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/inventory-summary.css" />
 </head>
@@ -32,7 +33,7 @@
 
       <!-- 📋 Users Table -->
       <div class="table-responsive shadow-sm rounded bg-white p-3">
-        <table class="table table-hover table-bordered align-middle mb-0">
+        <table>
           <thead class="table-primary text-center">
             <tr>
               <th>Name</th>
