--- a/public/consumable.html
+++ b/public/consumable.html
@@ -6,7 +6,9 @@
   <title>WRUS Portal</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/consumable.css">
   <link rel="icon" type="image/png" href="images/favicon-32x32.png">
 </head>
 <body>
@@ -22,10 +24,16 @@
         </h2>
 
         <div class="d-flex flex-column flex-sm-row justify-content-end align-items-stretch gap-2 w-100 w-md-auto">
-          <div class="input-group" style="min-width: 250px;">
-            <span class="input-group-text">Search</span>
-            <input type="text" id="searchInput" class="form-control" placeholder="Enter item name..." />
-          </div>
+        <div class="input-group water-theme" style="min-width: 250px;">
+          <span class="input-group-text bg-info text-dark border-0">🔍</span>
+          <input
+            type="text"
+            id="searchInput"
+            class="form-control border-0"
+            placeholder="Search for water items..."
+            style="background: linear-gradient(to right, #ffffff, #cbefff); color: #01579b;"
+          />
+        </div>
           <button id="showAddFormBtn" class="btn btn-primary" style="white-space: nowrap;">
             <i class="bi bi-plus-circle me-1"></i> Add
           </button>
@@ -44,7 +52,7 @@
       </div>
 
       <div class="table-responsive">
-        <table id="consumableTable" class="table table-bordered table-hover text-center align-middle">
+        <table id="consumableTable">
           <thead class="table-success">
             <tr>
               <th>CID</th>
@@ -67,7 +75,7 @@
         <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
           <div class="modal-content shadow-lg rounded-4">
             
-            <div class="modal-header bg-primary text-white rounded-top-4">
+            <div class="modal-header text-white rounded-top-4">
               <h5 class="modal-title fw-semibold" id="addItemModalLabel">Add New Item</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
@@ -118,7 +126,7 @@
         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
           <div class="modal-content shadow-lg rounded-4">
             
-            <div class="modal-header bg-warning text-dark rounded-top-4">
+            <div class="modal-header text-dark rounded-top-4">
               <h5 class="modal-title fw-semibold">Edit Item</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
