--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/dashboard.css">
 </head>
 <body>
   <div class="d-flex flex-column flex-md-row" id="wrapper">
