--- a/public/ics.html
+++ b/public/ics.html
@@ -7,7 +7,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/ics.css">
 </head>
 <body>
   <div class="d-flex flex-column flex-md-row" id="wrapper">
@@ -33,7 +35,7 @@
       </div>
 
       <div class="table-responsive">
-        <table class="table table-bordered table-striped">
+        <table>
           <thead class="table-primary">
             <tr>
               <th>ICS/PAR No.</th>
@@ -62,7 +64,7 @@
         <div class="modal-dialog modal-lg modal-dialog-scrollable">
           <div class="modal-content shadow-lg">
             <form id="addICSForm" class="needs-validation" novalidate>
-              <div class="modal-header bg-primary text-white">
+              <div class="modal-header text-white">
                 <h5 class="modal-title" id="addICSModalLabel">Add ICS Entry</h5>
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
@@ -180,7 +182,7 @@
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
             <form id="editICSForm" class="needs-validation" novalidate>
-              <div class="modal-header bg-warning text-dark">
+              <div class="modal-header text-dark">
                 <h5 class="modal-title" id="editICSModalLabel">Edit ICS Entry</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
