--- a/public/permit.html
+++ b/public/permit.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/permit.css">
 </head>
@@ -26,13 +27,14 @@
 
         <!-- Search Bar (Expands) -->
         <div class="flex-grow-1">
-          <div class="input-group">
+          <div class="input-group water-search">
             <input type="text" id="searchBar" class="form-control" placeholder="Search Permit No.">
             <span class="input-group-text">
               <i class="bi bi-search"></i>
             </span>
           </div>
         </div>
+
 
         <!-- Add Permit Button -->
         <div class="flex-shrink-0">
@@ -78,7 +80,7 @@
 
       <!-- Pagination control -->
       <div class="d-flex justify-content-between align-items-center mb-3">
-        <div>
+        <div class="rows-per-page-container">
           <label for="rowsPerPage" class="form-label me-2">Rows per page:</label>
           <select id="rowsPerPage" class="form-select d-inline-block w-auto">
             <option value="10" selected>10</option>
@@ -94,7 +96,7 @@
 
       <!-- Data Table -->
       <div class="table-responsive">
-        <table class="table table-bordered table-striped align-middle" id="permitTable">
+        <table id="permitTable">
           <thead class="table-primary">
             <tr>
               <th>Permit No</th>
