--- a/public/user-management.html
+++ b/public/user-management.html
@@ -8,7 +8,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/user.css">
 </head>
 
 <body>
@@ -52,7 +54,7 @@
       <!-- Data Table -->
       <div class="container-fluid p-3">
         <div class="table-responsive">
-          <table class="table table-hover table-striped table-bordered align-middle shadow-sm rounded">
+          <table>
             <thead class="table-primary text-center">
               <tr>
                 <th>Username</th>
@@ -69,18 +71,19 @@
       </div>
 
       <!-- Pagination Control -->
-      <nav>
-        <ul class="pagination justify-content-center" id="paginationControlsUsers">
-          <!-- Pagination buttons will be generated here -->
-        </ul>
-      </nav>
+    <nav>
+      <ul class="pagination justify-content-center" id="paginationControlsUsers">
+        <!-- Pagination buttons will be generated here -->
+      </ul>
+    </nav>
+
 
       <!-- Add User Modal -->
       <div class="modal fade" id="addUserModal" tabindex="-1" aria-labelledby="addUserModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content shadow rounded-3">
             <form id="addUserForm" class="needs-validation" novalidate>
-              <div class="modal-header bg-primary text-white">
+              <div class="modal-header text-white">
                 <h5 class="modal-title fw-semibold" id="addUserModalLabel">Add New User</h5>
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
@@ -196,7 +199,7 @@
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content shadow-lg border-0">
             <form id="editUserForm">
-              <div class="modal-header bg-primary text-white">
+              <div class="modal-header text-white">
                 <h5 class="modal-title" id="editUserModalLabel">
                   <i class="bi bi-pencil-square me-2"></i>Edit User
                 </h5>
