--- a/public/water-user.html
+++ b/public/water-user.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/wrus.css">
 </head>
@@ -21,7 +22,7 @@
         <div class="d-flex flex-column flex-md-row justify-content-between align-items-center gap-2">
 
           <div class="flex-grow-1 w-100">
-            <input type="text" id="searchInput" class="form-control" placeholder="Search water user or source...">
+            <input type="text" id="searchInput" class="form-control form-water" placeholder="Search water user or source...">
           </div>
 
           <div>
@@ -38,22 +39,18 @@
       </div>
 
       <div class="table-responsive">
-        <table class="table table-bordered table-hover align-middle">
-          <thead class="table-primary">
-            <tr>
-              <th rowspan="2">ID</th>
-              <th rowspan="2">Name of Water User</th>
-              <th rowspan="2">Location</th>
-              <th colspan="2" class="text-center">GPS Coordinates</th>
-              <th rowspan="2">Type</th>
-              <th rowspan="2">Remarks</th>
-              <th rowspan="2">Update</th>
-            </tr>
-            <tr>
-              <th>Latitude</th>
-              <th>Longitude</th>
-            </tr>
-          </thead>
+        <table>
+        <thead>
+          <tr class="bg-info text-white">
+            <th class="align-middle">ID</th>
+            <th class="align-middle">Name of Water User</th>
+            <th class="align-middle">Location</th>
+            <th class="align-middle">Latitude</th>
+            <th class="align-middle">Longitude</th>
+            <th class="align-middle">Type</th>
+            <th class="align-middle">Remarks</th>
+            <th class="align-middle">Update</th>
+        </thead>
           <tbody id="waterUserTableBody">
             <!-- Dynamic rows will be inserted here -->
           </tbody>
