improve search function by creating matching term and normalizing text

--- a/public/water-user.html
+++ b/public/water-user.html
@@ -25,8 +25,12 @@
             <input type="text" id="searchInput" class="form-control form-water" placeholder="Search water user or source...">
           </div>
 
+          <button id="refreshBtn" class="btn btn-primary shadow-sm px-3 py-2 d-flex align-items-center justify-content-center">
+            <i class="bi bi-arrow-clockwise me-1"></i>
+          </button>
+
           <div>
-            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addwusModal">
+            <button class="btn btn-primary shadow-sm px-3 py-2 d-flex align-items-center justify-content-center" data-bs-toggle="modal" data-bs-target="#addwusModal">
               <i class="bi bi-plus-circle"></i> Add
             </button>
           </div>
