--- a/public/consumable.html
+++ b/public/consumable.html
@@ -41,15 +41,22 @@
       </div>
 
       
-      <div class="d-flex align-items-center gap-2 my-2">
-        <label for="pageSizeSelect" class="form-label mb-0">Show</label>
-        <select id="pageSizeSelect" class="form-select form-select-sm" style="width: auto;">
-          <option value="10">10</option>
-          <option value="25">25</option>
-          <option value="50">50</option>
-        </select>
-        <span>entries</span>
+      <div class="d-flex align-items-center justify-content-between gap-2 my-2">
+        <div class="d-flex align-items-center gap-2">
+          <label for="pageSizeSelect" class="form-label mb-0">Show</label>
+          <select id="pageSizeSelect" class="form-select form-select-sm" style="width: auto;">
+            <option value="10">10</option>
+            <option value="25">25</option>
+            <option value="50">50</option>
+          </select>
+          <span>entries</span>
+        </div>
+
+        <button id="refreshBtn" class="btn btn-primary shadow-sm px-3 py-2 d-flex align-items-center gap-2">
+          <i class="bi bi-arrow-clockwise me-1"></i> Refresh 
+        </button>
       </div>
+
 
       <div class="table-responsive">
         <table id="consumableTable">
