--- a/public/ics.html
+++ b/public/ics.html
@@ -28,6 +28,9 @@
             <span class="input-group-text">Search</span>
             <input type="text" id="searchBar" class="form-control" placeholder="Enter item name..." />
           </div>
+          <button id="refreshBtn" class="btn btn-primary shadow-sm px-3 py-2 d-flex align-items-center justify-content-center">
+          <i class="bi bi-arrow-clockwise me-1"></i> 
+          </button>
           <button id="addBtn" class="btn btn-primary" style="white-space: nowrap;">
             <i class="bi bi-plus-circle me-1"></i> Add
           </button>
