--- a/public/user-management.html
+++ b/public/user-management.html
@@ -40,6 +40,9 @@
             />
           </div>
 
+        <button id="refreshBtn" class="btn btn-primary shadow-sm px-3 py-2 d-flex align-items-center justify-content-center">
+          <i class="bi bi-arrow-clockwise me-1"></i> 
+        </button>
           <!-- Add User Button -->
           <button
             id="showAddUserFormBtn"
