--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -6,9 +6,11 @@
   <title>WRUS Portal</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/dashboard.css">
+  <link rel="stylesheet" href="css/admin/admin-dashboard.css">
 </head>
 <body>
   <div class="d-flex flex-column flex-md-row" id="wrapper">
@@ -20,7 +22,24 @@
         Welcome Admin
       </p>
 
-      <div class="row">
+<div class="scorecard-wrapper">
+  <div class="scorecard">
+    <div class="scorecard-header">
+      <i class="bi bi-person-badge-fill"></i> User Encoded Permits
+    </div>
+
+    <!-- Card-style entries injected here -->
+    <div class="scorecard-grid-container" id="encodedPermitTableBody">
+      <!-- JS fills this -->
+    </div>
+
+    <p id="noEncodedMessage" class="no-record d-none">No encoded permits found.</p>
+  </div>
+</div>
+
+
+
+      <!-- <div class="row">
         <div class="col-md-3">
           <div class="card text-white bg-primary mb-3">
             <div class="card-header">Weather</div>
@@ -48,11 +67,10 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script type="module" src="js/dashboard.js"></script>
-  <script type="module" src="js/admin/admin-dashboard.js"></script>
+  <script type="module" src="js/dashboard/admin-dashboard-init.js"></script>
 </body>
 </html>
