--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WRUS Portal</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="stylesheet" href="css/login.css" />
 </head>
@@ -14,12 +15,6 @@
       <h4 id="portal-alert-title">Notice</h4>
       <p id="portal-alert-message"></p>
       <button id="portal-alert-ok" class="btn btn-primary w-100">OK</button>
-    </div>
-  </div>
-  <div id="login-success-overlay" class="login-success-overlay">
-    <div class="login-success-content">
-      <div class="checkmark">&#10004;</div>
-      <p>Login Successful</p>
     </div>
   </div>
 
