change the add update and delete object functions that invalidates the cache when called

--- a/public/consumable.html
+++ b/public/consumable.html
@@ -30,7 +30,7 @@
             type="text"
             id="searchInput"
             class="form-control border-0"
-            placeholder="Search for water items..."
+            placeholder="Search for consumable items..."
             style="background: linear-gradient(to right, #ffffff, #cbefff); color: #01579b;"
           />
         </div>
