--- a/public/water-user.html
+++ b/public/water-user.html
@@ -72,7 +72,7 @@
           <div class="modal-content shadow-sm">
             <form id="addWusForm" class="needs-validation" novalidate>
               <div class="modal-header bg-primary text-white">
-                <h5 class="modal-title" id="addwusModalLabel"><i class="bi bi-droplet-half me-2"></i>Add Water User</h5>
+                <h5 class="modal-title text-light" id="addwusModalLabel"><i class="bi bi-droplet-half me-2"></i>Add Water User</h5>
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
 
@@ -167,7 +167,7 @@
           <div class="modal-content shadow-sm">
             <form id="editWusForm" class="needs-validation" novalidate>
               <div class="modal-header bg-primary text-white">
-                <h5 class="modal-title" id="editwusModalLabel">
+                <h5 class="modal-title text-light" id="editwusModalLabel">
                   <i class="bi bi-pencil-square me-2"></i>Edit Water User
                 </h5>
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
