upload geotagged photo to permit

--- a/public/js/upload/upload.html
+++ b/public/js/upload/upload.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Test Upload</title>
-  <link rel="icon" href="data:,">
+  <title>Upload Image</title>
 </head>
 <body>
-  <input type="file" id="uploadInput" />
-  <button id="uploadButton">Upload</button>
+  <h2>Upload Image to Supabase</h2>
+  <input type="file" id="fileInput" />
+  <button id="uploadBtn">Upload</button>
 
-  <script type="module" src="./upload.js"></script>
+  <script type="module" src="./uploadImg.js">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/browser-image-compression@latest/dist/browser-image-compression.js"></script>
 </body>
 </html> -->
