--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -16,59 +16,73 @@
 
     <!-- Page Content -->
     <div class="container-fluid p-4" id="page-content">
-      <p class="mb-4 fs-4 fw-semibold text-primary bg-light p-3 rounded shadow-sm" id="welcomeText">
-        Welcome
-      </p>
-<!-- 
-        <div class="row">
-          <div class="col-md-3">
-            <div class="card text-white bg-info mb-3">
-              <div class="card-header">Weather</div>
-              <div class="card-body">
-                <h5 class="card-title" id="weather">Loading...</h5>
-                <p class="card-text" id="temperature"></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card text-white bg-success mb-3">
-              <div class="card-header">Date & Time</div>
-              <div class="card-body">
-                <h5 class="card-title" id="date"></h5>
-                <p class="card-text" id="time"></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card text-white bg-danger mb-3">
-              <div class="card-header">Network Speed</div>
-              <div class="card-body">
-                <h5 class="card-title" id="speed-value">Calculating...</h5>
-                <p class="card-text">Download speed is refreshed every 30 seconds.</p>
-              </div>
-            </div>
-          </div>
-      </div> -->
-    <div class="scorecard-wrapper">
-      <div class="scorecard">
-        <div class="scorecard-header">
-          📝 Your Encoded Permits (Monthly)
-          <!-- Refresh Button -->
-          <button id="refreshEncodedBtn" class="scorecard-refresh-btn" title="Refresh">
-            <i class="bi bi-arrow-clockwise"></i>
-          </button>
-        </div>
-        <!-- Use a div instead of a table -->
-        <div id="encodedPermitSummary" class="scorecard-list">
-          <!-- JavaScript will insert scorecards here -->
+      <div class="profile-banner d-flex flex-column align-items-start p-4 rounded shadow-sm mb-1">
+        <div class="profile-info">
+          <p id="welcomeText" class="welcome-text mb-1">Welcome</p>
+          <p id="userPositionText" class="user-position mb-0">Position</p>
         </div>
 
-        <div id="noEncodedMessage" class="no-record d-none text-center">
-          No records yet.
+        <!-- 
+          <div class="row">
+            <div class="col-md-3">
+              <div class="card text-white bg-info mb-3">
+                <div class="card-header">Weather</div>
+                <div class="card-body">
+                  <h5 class="card-title" id="weather">Loading...</h5>
+                  <p class="card-text" id="temperature"></p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card text-white bg-success mb-3">
+                <div class="card-header">Date & Time</div>
+                <div class="card-body">
+                  <h5 class="card-title" id="date"></h5>
+                  <p class="card-text" id="time"></p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card text-white bg-danger mb-3">
+                <div class="card-header">Network Speed</div>
+                <div class="card-body">
+                  <h5 class="card-title" id="speed-value">Calculating...</h5>
+                  <p class="card-text">Download speed is refreshed every 30 seconds.</p>
+                </div>
+              </div>
+            </div>
+        </div> -->
+        <div class="scorecard-wrapper">
+          <div class="scorecard">
+            <div class="scorecard-header">
+              📝 Your Encoded Permits (Monthly)
+              <!-- Refresh Button -->
+              <button id="refreshEncodedBtn" class="scorecard-refresh-btn" title="Refresh">
+                <i class="bi bi-arrow-clockwise"></i>
+              </button>
+            </div>
+            <!-- Use a div instead of a table -->
+            <div id="encodedPermitSummary" class="scorecard-list">
+              <!-- JavaScript will insert scorecards here -->
+            </div>
+
+            <div id="noEncodedMessage" class="no-record d-none text-center">
+              No records yet.
+            </div>
+          </div>
         </div>
+
+        <!-- Permit City Summary-->
+        <div class="city-table-wrapper text-center my-4">
+          <h4 class="mb-3 fw-semibold">Metro Manila Permit Visits by City</h4>
+          <div class="table-responsive d-flex justify-content-center">
+            <div class="table-container">
+              <div id="cityPermitTable" class="mb-4"></div>
+            </div>
+          </div>
+        </div>
+
       </div>
-    </div>
-
     </div>
   </div>
 
