change max kb size for uploaded image to 100kb

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -18,7 +18,7 @@
     <div class="container-fluid p-4" id="page-content">
       <div class="profile-banner d-flex flex-column align-items-start p-4 rounded shadow-sm mb-1">
         <div class="profile-info">
-          <p id="welcomeText" class="welcome-text mb-1">Welcome</p>
+          <h2 id="welcomeText" class="welcome-text mb-1"></h2>
           <p id="userPositionText" class="user-position mb-0">Position</p>
         </div>
 
@@ -74,7 +74,6 @@
 
         <!-- Permit City Summary-->
         <div class="city-table-wrapper text-center my-4">
-          <h4 class="mb-3 fw-semibold">Metro Manila Permit Visits by City</h4>
           <div class="table-responsive d-flex justify-content-center">
             <div class="table-container">
               <div id="cityPermitTable" class="mb-4"></div>
