add profile tabs and change password module

--- a/public/water-user.html
+++ b/public/water-user.html
@@ -15,7 +15,7 @@
   <div class="d-flex flex-column flex-md-row" id="wrapper">
     <div id="sidebarContainer"></div>
     <div class="container-fluid p-4" id="page-content">
-      <h2>
+      <h2 class="mb-0 h5 h2-sm">
         <i class="bi bi-droplet-half"></i> Water Users and Sources
       </h2>
       <div class="container mb-3">
