--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -6,6 +6,8 @@
   <title>WRUS Portal</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/dashboard.css">
@@ -15,59 +17,109 @@
     <div id="sidebarContainer"></div>
 
     <!-- Page Content -->
-    <div class="container-fluid p-4" id="page-content">
-      <div class="profile-banner d-flex flex-column align-items-start p-4 rounded shadow-sm mb-1">
-        <div class="profile-info">
-          <h2 id="welcomeText" class="welcome-text mb-1"></h2>
-          <p id="userPositionText" class="user-position mb-0">Position</p>
-        </div>
-        <div class="scorecard-wrapper">
-          <div class="scorecard">
-            <div class="scorecard-header">
-              📝 Your Encoded Permits (Monthly)
-              <!-- Refresh Button -->
-              <button id="refreshEncodedBtn" class="scorecard-refresh-btn" title="Refresh">
-                <i class="bi bi-arrow-clockwise"></i>
-              </button>
-            </div>
-            <!-- Use a div instead of a table -->
-            <div id="encodedPermitSummary" class="scorecard-list">
-              <!-- JavaScript will insert scorecards here -->
-            </div>
+  <div class="container-fluid d-flex flex-column vh-100 p-4" id="page-content">
+    <!-- Tabs Navigation -->
+    <ul class="nav nav-tabs flex-shrink-0" id="dashboardTabs" role="tablist">
+      <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profileTab" type="button" role="tab" aria-controls="profileTab" aria-selected="true">
+          Profile
+        </button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="summary-tab" data-bs-toggle="tab" data-bs-target="#summaryTab" type="button" role="tab" aria-controls="summaryTab" aria-selected="false">
+          Summary Report
+        </button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="settings-tab" data-bs-toggle="tab" data-bs-target="#settingsTab" type="button" role="tab" aria-controls="settingsTab" aria-selected="false">
+          Account Settings
+        </button>
+      </li>
+    </ul>
 
-            <div id="noEncodedMessage" class="no-record d-none text-center">
-              No records yet.
-            </div>
+    <!-- Tab Content -->
+    <div class="tab-content" id="dashboardTabContent">
+      <!-- Profile Tab -->
+      <div class="tab-pane fade show active" id="profileTab" role="tabpanel" aria-labelledby="profile-tab">
+        <div class="profile-banner d-flex flex-column align-items-start p-4 rounded shadow-sm mb-1">
+          <div class="profile-info">
+            <h3 id="welcomeText" class="welcome-text mb-1"></h3>
+            <p id="userPositionText" class="user-position mb-0">Position</p>
           </div>
-        </div>
 
-        <!-- Permit City Summary-->
-        <div class="city-table-wrapper text-center my-4">
-          <div class="table-responsive d-flex justify-content-center">
-            <div class="table-container">
-              <div id="cityPermitTable" class="mb-4"></div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Announcement Modal -->
-        <div class="modal fade" id="announcementModal" tabindex="-1" aria-labelledby="announcementModalLabel" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="announcementModalLabel">📢 Announcement</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <!-- Scorecard -->
+          <div class="scorecard-wrapper mt-3">
+            <div class="scorecard">
+              <div class="scorecard-header">
+                📝 Your Encoded Permits (Monthly)
+                <button id="refreshEncodedBtn" class="scorecard-refresh-btn" title="Refresh">
+                  <i class="bi bi-arrow-clockwise"></i>
+                </button>
               </div>
-              <div class="modal-body">
-                <p id="announcementMessage">Default message</p>
+              <div id="encodedPermitSummary" class="scorecard-list"></div>
+              <div id="noEncodedMessage" class="no-record d-none text-center">No records yet.</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Summary Report Tab -->
+      <div class="tab-pane fade" id="summaryTab" role="tabpanel" aria-labelledby="summary-tab">
+        <div class="profile-banner d-flex flex-column align-items-start p-4 rounded shadow-sm mb-1">
+          <h3>Summary Report</h3>
+          <!-- Permit City Summary -->
+          <div class="city-table-wrapper text-center my-4">
+            <div class="table-responsive d-flex justify-content-center">
+              <div class="table-container">
+                <div id="cityPermitTable" class="mb-4"></div>
               </div>
             </div>
           </div>
         </div>
+      </div>
 
+      <!-- Account Settings Tab -->
+      <div class="tab-pane fade" id="settingsTab" role="tabpanel" aria-labelledby="settings-tab">
+        <div class="profile-banner d-flex flex-column align-items-start p-4 rounded shadow-sm mb-1 w-100">
+          <h3>Account Settings</h3>
+          <p class="text-muted">Change your password below.</p>
 
+          <div class="card shadow-sm water-card p-4 mt-4">
+            <div class="text-center">
+              <i class="fas fa-cog gear-icon"></i>
+              <h5 class="text-water mb-3">Change Password</h5>
+            </div>
+            <form id="changePasswordForm">
+              <div class="mb-3">
+                <label for="newPassword" class="form-label">New Password</label>
+                <input type="password" class="form-control form-water" id="newPassword" required minlength="6" />
+              </div>
+              <div class="mb-3">
+                <label for="confirmPassword" class="form-label">Confirm Password</label>
+                <input type="password" class="form-control form-water" id="confirmPassword" required minlength="6" />
+              </div>
+              <button type="submit" class="btn btn-water w-100">Update Password</button>
+            </form>
+          </div>
+        </div>
       </div>
     </div>
+    <!-- Announcement Modal -->
+    <div class="modal fade" id="announcementModal" tabindex="-1" aria-labelledby="announcementModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="announcementModalLabel">📢 Announcement</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <p id="announcementMessage">Default message</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
