--- a/public/permit.html
+++ b/public/permit.html
@@ -17,15 +17,14 @@
     <div class="container-fluid p-4" id="page-content">
       <!-- Heading -->
       <div class="mb-2">
-        <h2 class="mb-0">
-          <i class="bi bi-file-earmark-text"></i> Water Permit
+        <h2 class="mb-0 h5 h2-sm">
+          <i class="bi bi-file-earmark-text d-none d-sm-inline"></i> Water Permit
         </h2>
       </div>
 
-      <!-- Search Bar and Add Button Row -->
       <div class="d-flex flex-wrap align-items-center mb-3 gap-2">
 
-        <!-- Search Bar (Expands) -->
+        <!-- Search Bar (Always Visible) -->
         <div class="flex-grow-1">
           <div class="input-group water-search">
             <input type="text" id="searchBar" class="form-control" placeholder="Search Permit No. or City">
@@ -35,8 +34,8 @@
           </div>
         </div>
 
-        <!-- Add Permit Button -->
-        <div class="flex-shrink-0">
+        <!-- Add Permit Button (Hide on small screens) -->
+        <div class="flex-shrink-0 d-none d-sm-block">
           <button class="btn btn-primary shadow-sm px-3 py-2 d-flex align-items-center gap-2" id="addPermitBtn">
             <span class="d-inline-flex justify-content-center align-items-center bg-light text-primary rounded-circle" style="width: 24px; height: 24px;">
               <i class="bi bi-plus-lg"></i>
@@ -47,9 +46,11 @@
 
       </div>
 
-      <button id="toggleFilter" class="btn btn-sm">
+
+      <button id="toggleFilter" class="btn btn-sm d-none d-sm-inline-block">
         <i class="bi bi-eye-slash"></i> Hide Filters
       </button>
+
 
       <!-- Filter Section -->
       <div class="mb-3" id="filterSection">
@@ -77,12 +78,14 @@
         </div>
       </div>
 
-      <!-- Pagination control -->
+      <!-- Pagination and Button Controls -->
       <div class="d-flex flex-column flex-sm-row justify-content-between align-items-start align-items-sm-center gap-2 mb-1 mt-1 flex-wrap">
-        
-        <!-- Left Side: Rows per page and Pagination -->
+
+        <!-- Left Side -->
         <div class="d-flex flex-wrap flex-sm-nowrap align-items-center gap-3">
-          <div class="rows-per-page-container d-flex align-items-center">
+          
+          <!-- Rows per page (hidden on small screens) -->
+          <div class="rows-per-page-container d-none d-sm-flex align-items-center">
             <label for="rowsPerPage" class="form-label me-2 mb-0">Rows per page:</label>
             <select id="rowsPerPage" class="form-select d-inline-block w-auto">
               <option value="10" selected>10</option>
@@ -91,22 +94,26 @@
             </select>
           </div>
 
-          <nav aria-label="Page navigation">
-            <ul class="pagination mb-0" id="pagination"></ul>
-          </nav>
+          <!-- Pagination and Refresh Button aligned inline on small screens -->
+          <div class="d-flex align-items-center gap-2">
+            <nav aria-label="Page navigation">
+              <ul class="pagination mb-0" id="pagination"></ul>
+            </nav>
+
+            <!-- Refresh Button (Always visible) -->
+            <button id="refreshBtn" class="btn btn-primary shadow-sm px-2 py-2 d-flex align-items-center justify-content-center">
+              <i class="bi bi-arrow-clockwise"></i>
+            </button>
+          </div>
         </div>
 
-        <!-- Right Side: Export PDF and Refresh Button grouped -->
-        <div class="d-flex flex-row align-items-center gap-2">
+        <!-- Right Side: Export Button (hidden on small screens) -->
+        <div class="d-none d-sm-flex flex-row align-items-center gap-2">
           <button class="btn btn-success shadow-sm px-3 py-2 d-flex align-items-center gap-2" id="exportPermitsBtn">
             <span class="d-inline-flex justify-content-center align-items-center bg-light text-success rounded-circle" style="width: 24px; height: 24px;">
               <i class="bi bi-download"></i>
             </span>
             Export
-          </button>
-
-          <button id="refreshBtn" class="btn btn-primary shadow-sm px-3 py-2 d-flex align-items-center justify-content-center">
-            <i class="bi bi-arrow-clockwise me-1"></i> 
           </button>
         </div>
       </div>
