--- a/public/report.html
+++ b/public/report.html
@@ -14,7 +14,7 @@
   <div class="d-flex flex-column flex-md-row" id="wrapper">
     <div id="sidebarContainer"></div>
     <div class="container-fluid p-4" id="page-content">
-      <h2><i class="bi bi-bar-chart"></i> Accomplishment Report</h2>
+      <h2 class="mb-0 h5 h2-sm"><i class="bi bi-bar-chart"></i> Accomplishment Report</h2>
 
     </div>
   </div>
